tests/parser/tests/cases/should_fail/non_hex_unicode_char/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:8
1 |   k := '\u{g00000}';
  |          ^^ here
  = note: Invalid character escape sequence Expected '}' after a escape sequence
